# pali-ai

./: .gitignore  .gitmodules  README.md  merge_model.py  run_model.py  run_qwen2vl.py
codes/: create_dataset_from_jsonl.py  create_dataset_from_jsonl_image.py  demo_lora.py  download_dataset.py  falcon_awq.py  hf_repo_download.py  infer_internvl.py
codes/datasets_handler/: download_datasets.py  process_city_country.py  process_first_aid_instructions.py  process_general_knowledge.py  process_mountain_survival.py  process_reddit_qa.py  process_wikipedia.py
codes/datasets_handler/utils/: combine_jsonl.py  helper.py
docs/: Qwen2VL_benchmark.md  gguf.md  lora_export.md  lora_finetuning.md  lora_finetuning.md.old  resources.md  run.md
ui/llm_chat_ui-0.0.1/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
ui/llm_chat_ui-0.0.1/example/: pubspec.yaml
ui/llm_chat_ui-0.0.1/example/lib/: main.dart
ui/llm_chat_ui-0.0.1/lib/: llm_chat_ui.dart
ui/llm_chat_ui-0.0.1/lib/src/: chat_screen.dart  message_bubble.dart
ui/llm_chat_ui-0.0.1/lib/src/models/: chat_message.dart  message_type.dart
ui/llm_chat_ui-0.0.1/lib/src/theme/: app_color.dart
ui/pali/: .gitignore  README.md  firepit-log.txt  pubspec.yaml
ui/pali/android/: settings.gradle
ui/pali/android/app/: build.gradle  google-services.json
ui/pali/android/app/src/main/: AndroidManifest.xml
ui/pali/android/app/src/main/kotlin/com/bbflight/background_downloader_example/example/: MainActivity.kt
ui/pali/ios/Runner/: Info-Debug.plist  Info-Release.plist
ui/pali/lib/: common_definitions.dart  llama_cpp.dart  main.dart
ui/pali/lib/pages/: chat.dart  download_model.dart  home.dart  load_model.dart
ui/pali/lib/utils/: ai_model.dart  common.dart
ui/pali/macos/Flutter/: GeneratedPluginRegistrant.swift
ui/pali/native/: CMakeLists.txt
ui/pali/native/include/: example.h
ui/pali/native/src/: example.cpp
